requirements numbering + corrections

--- a/doku/spec/spec02-datamodel.tex
+++ b/doku/spec/spec02-datamodel.tex
@@ -1,6 +1,8 @@
 \chapter{Datenmodell der Metadaten} \label{spec:model}
 An dieser Stelle wird bereits ein vereinfachtes Datenmodell festgelegt, welches
-später auf Datenbank und XML-Daten umgesetzt werden soll und zentrale Metadaten über HTML-Seiten erfassen soll. Für jede HTML-Datei wird dabei ein solcher Satz von Metadaten angelegt.
+später auf Datenbank und XML-Daten umgesetzt wird und zentrale Metadaten über HTML-Seiten erfassen soll. 
+
+Für jede HTML-Datei wird dabei ein solcher Satz von Metadaten angelegt.
 Die Metadaten sollen vor allen Dingen Such- und Sortieraufgaben erleichtern. 
 
 \begin{table}[h]
@@ -9,7 +11,7 @@ Die Metadaten sollen vor allen Dingen Such- und Sortieraufgaben erleichtern.
 	\hline
 	Name 		& Datentyp 				& Beschreibung \\
 	\hline
-	URL 		& String 				& Original URL der HTML\\
+	URL 		& String 				& Original URL der HTML-Datei\\
 	Titel 		& String 				& Soweit vorhanden wird der Titel der Seite \\ 
 	 			& 						& gespeichert \\ 
 	Archivpfad 	& String 				& Dateipfad des \htmlarc-Ordners im Webarchiv \\
