removed ip from server cfg

--- a/doku/spec/spec03-requirements.tex
+++ b/doku/spec/spec03-requirements.tex
@@ -239,7 +239,7 @@ und die Daten in das Archiv schreiben.
 \initReqgrp{Sv}
 \begin{description}
 	\item [\req{Konfiguration}{conf}]
-		Es sind die IP und der Port des Servers in einer Config-Datei zu hinterlegen.
+		Es ist der Port des Servers in einer Config-Datei zu hinterlegen.
 		Desweiteren werden darin auch alle Pfade zu externe Libraries, Treibern und Ressourcen
 		hinterlegt.
 	\item [\req{Client-Server Kommunikation}{comm}]
